--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf8">
         <title>Odin Landing Page</title>
+        <link rel="stylesheet" href="css/styles.css"
     </head>
     <body>
-        <div class="content">
-            <div class="header">
+        <div class="wrapper">
+            <header class="header">
                 <div class="logo">
                     HEADER LOGO
                 </div>
@@ -15,60 +16,77 @@
                     <a>header link two</a>
                     <a>header link three</a>
                 </div>
-            </div>
-            <div class="page-top">
-                <div class="descrition">
-                    <div class="title">This Website does stuff :0</div>
-                    <div class="description-text">idiuwqhdiquwhduqhdqwuihdqwiuciwubciwebniwenbci</div>
-                    <button class="sign-up-button">Sign up</button>
-                </div>
-                <div class="img top">
-                    <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg">
-                </div>
-            </div>
-            <div class="page-middle">
-                <div class="middle-header">
-                    <h2>Random Info</h2>
-                </div>
-                <div class="img-list middle">
-                    <div class="block">
-                        <img class="img-round">
-                        <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+            </header>
+            <div class="main">
+                <div>
+                    <div class="page-top">
+                        <div class="descrition">
+                            <div class="title">This Website does stuff :0</div>
+                            <div class="description-text">idiuwqhdiquwhduqhdqwuihdqwiuciwubciwebniwenbci</div>
+                            <button class="sign-up-button">Sign up</button>
+                        </div>
+                        <div class="top">
+                            <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg"
+                             class="img">
+                        </div>
                     </div>
-                    <div class="block">
-                        <img class="img-round">
-                        <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                    <div class="page-middle">
+                        <div class="middle-header">
+                            <h2>Random Info</h2>
+                        </div>
+                        <div class="img-list-middle">
+                            <div class="block">
+                                <div class="img-center">
+                                    <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
+                                </div>
+                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                            </div>
+                            <div class="block">
+                                <div class="img-center">
+                                    <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
+                                </div>
+                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                            </div>
+                            <div class="block">
+                                <div class="img-center">
+                                    <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
+                                </div>
+                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                            </div>
+                            <div class="block">
+                                <div class="img-center">
+                                    <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
+                                </div>
+                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="block">
-                        <img class="img-round">
-                        <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                    <div class="page-down">
+                        <div class="quote">
+                            <p class="quote=text">wiociewuhiuowebcihbewcbwebvowiubewbouiybweuiohewouihweoucequbciuqiocupewociewuiocw</p>
+                        </div>
+                        <div class="author">
+                            <p class="author-text">MEEEE</p>
+                        </div>
                     </div>
-                    <div class="block">
-                        <img class="img-round">
-                        <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                    <div class="page-downer">
+                        <div class="box">
+                            <div class="sign-up-text">
+                                <h3>pls pls pls sign up</h3>
+                                <p>fewfewfwvsbewrbvwesrbfrdfbedrrfd</p>
+                            </div>
+                            <div class="sign-up">
+                                <button class="sign-up-button">Sign up</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="page-down">
-                <div class="quote">
-                    <p class="quote=text"></p>
+            <footer class="footer">
+                <div class="footer-content">
+                    <p class="copyright">Copyright jdojcwejo</p>
                 </div>
-                <div class="author">
-                    <p class="author-text">dfbfdbfdbdvc</p>
-                </div>
-            </div>
-            <div class="page-downer">
-                <div class="sign-up">
-                    <h3>pls pls pls sign up</h3>
-                    <p>fewfewfwvsbewrbvwesrbfrdfbedrrfd</p>
-                </div>
-                <div class="signup">
-                    <button class="sign-up-button">Sign up</button>
-                </div>
-            </div>
-            <div class="footer">
-                <p class="copyright">Copyright jdojcwejo</p>
-            </div>
+            </footer>
         </div>
     </body>
 </html>
