Complete html and css foundation

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 <div>
                     <div class="page-top">
                         <div class="descrition">
-                            <div class="title">This Website does stuff :0</div>
-                            <div class="description-text">idiuwqhdiquwhduqhdqwuihdqwiuciwubciwebniwenbci</div>
+                            <div class="title">This Website does stuff</div>
+                            <div class="description-text">
+                                <p>This property defines the breaks in the word to avoid the overflow when a word is too long to fit in the container. It specifies the breaking of words when the content exceeds the container's boundary.</p>    
+                            </div>
                             <button class="sign-up-button">Sign up</button>
                         </div>
                         <div class="top">
@@ -39,41 +41,43 @@
                                 <div class="img-center">
                                     <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
                                 </div>
-                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                                <p>defines the breaks in the word to avoid the</p>
                             </div>
                             <div class="block">
                                 <div class="img-center">
                                     <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
                                 </div>
-                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                                <p>defines the breaks in the word to avoid the</p>
                             </div>
                             <div class="block">
                                 <div class="img-center">
                                     <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
                                 </div>
-                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                                <p>defines the breaks in the word to avoid the</p>
                             </div>
                             <div class="block">
                                 <div class="img-center">
                                     <img src="img/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" class="img-round">
                                 </div>
-                                <p>dfbfdbdfbrbdfdrvdvbregeberbeb</p>
+                                <p>defines the breaks in the word to avoid the</p>
                             </div>
                         </div>
                     </div>
                     <div class="page-down">
-                        <div class="quote">
-                            <p class="quote=text">wiociewuhiuowebcihbewcbwebvowiubewbouiybweuiohewouihweoucequbciuqiocupewociewuiocw</p>
-                        </div>
-                        <div class="author">
-                            <p class="author-text">MEEEE</p>
+                        <div class="quote-box">
+                            <div class="quote">
+                                <p class="quote-text">Defines the breaks in the wordthe breaks in the wordthe breaks in the word to avoid thedefines the breaks in the word to avoid the</p>
+                            </div>
+                            <div class="author">
+                                <p class="author-text">-Author, time</p>
+                            </div>
                         </div>
                     </div>
                     <div class="page-downer">
                         <div class="box">
                             <div class="sign-up-text">
-                                <h3>pls pls pls sign up</h3>
-                                <p>fewfewfwvsbewrbvwesrbfrdfbedrrfd</p>
+                                <h3 class="logo">pls sign up</h3>
+                                <p>the breaks in the wordthe breaks in the wordthe breaks in</p>
                             </div>
                             <div class="sign-up">
                                 <button class="sign-up-button">Sign up</button>
@@ -84,7 +88,7 @@
             </div>
             <footer class="footer">
                 <div class="footer-content">
-                    <p class="copyright">Copyright jdojcwejo</p>
+                    <p class="copyright">Copyright some@thing, 20XX-20XX</p>
                 </div>
             </footer>
         </div>
